# env

./: .bashrc  .gitignore  README.md
env/: .bashrc
git-bash/: git-prompt.sh
nvim/: init.lua  lazy-lock.json
nvim/after/plugin/: colors.lua  copilot.lua  harpoon.lua  lsp.lua  null-ls.lua  prettier.lua  telescope.lua  treesitter.lua
nvim/lua/lindeneg/: autocmds.lua  comment-cmd.lua  init.lua  lazy.lua  remap.lua  run-cmd.lua  set.lua  utils.lua
osx/: .bashrc  .zprofile  .zshrc
scaffold/templates/: CMakeLists.txt
windows-terminal/: settings.json
windows/scaffold/: cmg.bat
windows/scaffold/templates/: CMakeLists.txt  gitignore  godot_tools_ios.patch  godot_tools_linux.patch  godot_tools_targets.patch  godot_tools_windows.patch
windows/terminal/: settings.json
